[package]
name = "rps"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
log = "0.4.16"
env_logger = "0.9.0"
winit = "0.26.1"
wgpu = "0.12.0"
pollster = "0.2.5"

[dependencies.bytemuck]
version = "1.9.1"
features = ["derive"]
